--- a/source/html/index.html
+++ b/source/html/index.html
@@ -18,7 +18,7 @@
           src="/assets/images/svg/warble-logo.svg"
           alt="warble-logo"
         />
-        <h1 class="warble-title">︱Warble</h1>
+        <h1 class="warble-title">&nbsp;Warble</h1>
       </div>
 
       <div class="search-container">
@@ -35,8 +35,8 @@
       Favorite Album: Blurryface by Twenty One Pilots&nbsp;&nbsp; •
       &nbsp;&nbsp;Most Listened Song: СИДАТИВИ by СТРУКТУРА ЩАСТЯ (3568
       times)&nbsp;&nbsp; • &nbsp;&nbsp;Time Listened: 47898 hours&nbsp;&nbsp; •
-      &nbsp;&nbsp;Top Genres: Rock, Metal, Phonknbsp;&nbsp; • &nbsp;&nbsp;Song
-      of the Month: Chelsea Dagger by The Fratellis
+      &nbsp;&nbsp;Top Genres: Rock, Metal, Phonk&nbsp; • &nbsp;&nbsp;Song of the
+      Month: Chelsea Dagger by The Fratellis
     </div>
 
     <div class="main">
