Start to make the left-sidebar
I started to make the left sidebar with Song Showcase (I'll rename it ig)
Looks so good for now

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -18,7 +18,7 @@
           src="/assets/images/svg/warble-logo.svg"
           alt="warble-logo"
         />
-        <h1 class="warble-title">&nbsp;Warble</h1>
+        <h1 class="warble-title">︱Warble</h1>
       </div>
 
       <div class="search-container">
@@ -36,13 +36,39 @@
       &nbsp;&nbsp;Most Listened Song: СИДАТИВИ by СТРУКТУРА ЩАСТЯ (3568
       times)&nbsp;&nbsp; • &nbsp;&nbsp;Time Listened: 47898 hours&nbsp;&nbsp; •
       &nbsp;&nbsp;Top Genres: Rock, Metal, Phonk&nbsp; • &nbsp;&nbsp;Song of the
-      Month: Chelsea Dagger by The Fratellis
+      Month: Chelsea Dagger by The Fratellis&nbsp; • &nbsp; qweqweqweqwrw
     </div>
 
     <div class="main">
-      <div class="left-sidebar"></div>
+      <div class="left-sidebar">
+        <div class="showcase">
+          <h3 class="showcase-title">< Song Information ></h3>
+          <img
+            class="song-cover"
+            src="/assets/images/jpg/song-cover.jpeg"
+            alt="song-cover"
+          />
+          <p class="song-title">Запам'ятай мої рядки</p>
+          <div class="author">
+            <img
+              class="author-icon"
+              src="/assets/images/jpg/author-icon.jpeg"
+              alt="author-icon"
+            />
+            <div style="display: flex; flex-direction: column; gap: 4px">
+              <p class="song-author">СТРУКТУРА ЩАСТЯ</p>
+              <p style="margin: 0; font-size: 10px">
+                116.3k followers&nbsp; • &nbsp;42 songs
+              </p>
+            </div>
+          </div>
+          <div class="queue"><p class="queue-title">Next in queue:</p></div>
+        </div>
+      </div>
 
-      <div class="content"></div>
+      <div class="hero">
+        <div class="short-song-menu"></div>
+      </div>
     </div>
   </body>
 </html>
