--- a/source/html/index.html
+++ b/source/html/index.html
@@ -28,7 +28,9 @@
         </button>
       </div>
 
-      <button type="button" class="header-button">☰</button>
+      <div style="width: 220px; display: flex; justify-content: flex-end">
+        <button type="button" class="header-button">☰</button>
+      </div>
     </header>
 
     <div class="short-info">
