Clean code a bit
Move all style parameters from index.html to style.css

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -22,14 +22,108 @@
       </div>
 
       <div class="search-container">
+        <svg
+          class="search-svg"
+          clip-rule="evenodd"
+          fill-rule="evenodd"
+          stroke-linejoin="round"
+          stroke-miterlimit="2"
+          width="16px"
+          height="16px"
+          fill="gray"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="m15.97 17.031c-1.479 1.238-3.384 1.985-5.461 1.985-4.697 0-8.509-3.812-8.509-8.508s3.812-8.508 8.509-8.508c4.695 0 8.508 3.812 8.508 8.508 0 2.078-.747 3.984-1.985 5.461l4.749 4.75c.146.146.219.338.219.531 0 .587-.537.75-.75.75-.192 0-.384-.073-.531-.22zm-5.461-13.53c-3.868 0-7.007 3.14-7.007 7.007s3.139 7.007 7.007 7.007c3.866 0 7.007-3.14 7.007-7.007s-3.141-7.007-7.007-7.007z"
+            fill-rule="nonzero"
+          />
+        </svg>
+
         <input type="text" id="search-box" placeholder="Search..." />
-        <button type="submit" class="search-button">
-          <img src="/assets/images/svg/search.svg" alt="search" />
-        </button>
+
+        <svg
+          class="cancel-svg"
+          viewBox="0 0 512 512"
+          version="1.1"
+          width="16px"
+          height="16px"
+          xml:space="preserve"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+        >
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <g id="_x37_12-_close__x2C__cross__x2C__cancel__x2C_">
+              <g>
+                <line
+                  style="
+                    fill: none;
+                    stroke: gray;
+                    stroke-width: 13.4167;
+                    stroke-linecap: round;
+                    stroke-linejoin: round;
+                    stroke-miterlimit: 2.6131;
+                  "
+                  x1="486.21"
+                  x2="26.739"
+                  y1="26.814"
+                  y2="486.139"
+                ></line>
+                <line
+                  style="
+                    fill: none;
+                    stroke: gray;
+                    stroke-width: 13.4167;
+                    stroke-linecap: round;
+                    stroke-linejoin: round;
+                    stroke-miterlimit: 2.6131;
+                  "
+                  x1="486.21"
+                  x2="26.739"
+                  y1="486.139"
+                  y2="26.814"
+                ></line>
+              </g>
+            </g>
+            <g id="Layer_1"></g>
+          </g>
+        </svg>
       </div>
 
-      <div style="width: 220px; display: flex; justify-content: flex-end">
-        <button type="button" class="header-button">☰</button>
+      <div class="right-buttons-header">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          fill="white"
+          viewBox="0 0 24 24"
+        >
+          <path
+            d="M15.137 3.945c-.644-.374-1.041-1.07-1.04-1.82v-.003c0-1.172-.939-2.122-2.097-2.122s-2.097.95-2.097 2.122v.003c.001.751-.396 1.446-1.041 1.82-4.667 2.712-1.985 11.715-6.862 13.306v1.749h20v-1.749c-4.877-1.591-2.195-10.594-6.863-13.306zm-6.728 12.055h-1.882c1.245-2.741.879-9.012 3.873-10.655-1.761 2.067-.95 7.504-1.991 10.655zm3.591-13c-.552 0-1-.448-1-1 0-.551.448-1 1-1s1 .449 1 1c0 .552-.448 1-1 1zm-3 18h6c0 1.598-1.393 3-2.971 3-1.579 0-3.029-1.402-3.029-3z"
+          />
+        </svg>
+
+        <svg
+          clip-rule="evenodd"
+          fill-rule="evenodd"
+          stroke-linejoin="round"
+          stroke-miterlimit="2"
+          width="30"
+          height="30"
+          fill="white"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="m2 17.75c0-.414.336-.75.75-.75h18.5c.414 0 .75.336.75.75s-.336.75-.75.75h-18.5c-.414 0-.75-.336-.75-.75zm2.474-3.249s-.501-.505-2.254-2.259c-.147-.146-.22-.338-.22-.53s.073-.384.22-.53c1.752-1.754 2.254-2.258 2.254-2.258.145-.145.335-.217.526-.217.192 0 .384.074.53.221.293.292.295.766.004 1.057l-.977.977h4.693c.414 0 .75.336.75.75s-.336.75-.75.75h-4.693l.978.979c.289.289.287.761-.006 1.054-.147.147-.339.221-.53.222-.191 0-.38-.071-.525-.216zm6.526-.751c0-.414.336-.75.75-.75h9.5c.414 0 .75.336.75.75s-.336.75-.75.75h-9.5c-.414 0-.75-.336-.75-.75zm0-4c0-.414.336-.75.75-.75h9.5c.414 0 .75.336.75.75s-.336.75-.75.75h-9.5c-.414 0-.75-.336-.75-.75zm-9-4c0-.414.336-.75.75-.75h18.5c.414 0 .75.336.75.75s-.336.75-.75.75h-18.5c-.414 0-.75-.336-.75-.75z"
+          />
+        </svg>
       </div>
     </header>
 
@@ -38,35 +132,28 @@
       &nbsp;&nbsp;Most Listened Song: СИДАТИВИ by СТРУКТУРА ЩАСТЯ (3568
       times)&nbsp;&nbsp; • &nbsp;&nbsp;Time Listened: 47898 hours&nbsp;&nbsp; •
       &nbsp;&nbsp;Top Genres: Rock, Metal, Phonk&nbsp; • &nbsp;&nbsp;Song of the
-      Month: Chelsea Dagger by The Fratellis&nbsp; • &nbsp; qweqweqweqwrw
+      Month: Chelsea Dagger by The Fratellis&nbsp; • &nbsp; qweqweqwe
     </div>
 
     <div class="main">
       <div class="left-sidebar">
-        <div class="showcase">
-          <h3 class="showcase-title">< Song Player ></h3>
+        <div class="showcase-container">
+          <h3 class="showcase-title no-margin">< Song Player ></h3>
           <img
             class="song-cover"
             src="/assets/images/jpg/song-cover.jpeg"
             alt="song-cover"
           />
           <p class="song-title">Запам'ятай мої рядки</p>
-          <div class="author">
+          <div class="author-box">
             <img
               class="author-icon"
               src="/assets/images/jpg/author-icon.jpeg"
               alt="author-icon"
             />
-            <div
-              style="
-                display: flex;
-                flex-direction: column;
-                gap: 4px;
-                justify-content: center;
-              "
-            >
-              <p style="margin: 0">СТРУКТУРА ЩАСТЯ</p>
-              <p style="margin: 0; font-size: 10px">
+            <div class="author-infobox">
+              <p class="no-margin">СТРУКТУРА ЩАСТЯ</p>
+              <p class="author-info no-margin">
                 116.3k followers&nbsp; • &nbsp;42 songs
               </p>
             </div>
@@ -147,18 +234,9 @@
                   src="/assets/images/jpg/song-cover-1.jpg"
                   alt="Flare by Hensonn"
                 />
-                <div
-                  style="
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    justify-content: center;
-                  "
-                >
-                  <p style="margin: 0; font-weight: bold; font-size: 15px">
-                    Flare
-                  </p>
-                  <p style="margin: 0; font-size: 12px">Hensonn</p>
+                <div class="author-infobox">
+                  <p class="song-title no-margin">Flare</p>
+                  <p class="author-nickname-in-queue no-margin">Hensonn</p>
                 </div>
               </div>
 
@@ -200,18 +278,11 @@
                   src="/assets/images/jpg/song-cover-2.jpg"
                   alt="WEB-CUM by СТРУКТУРА ЩАСТЯ"
                 />
-                <div
-                  style="
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    justify-content: center;
-                  "
-                >
-                  <p style="margin: 0; font-weight: bold; font-size: 15px">
-                    WEB-CUM
+                <div class="author-infobox">
+                  <p class="song-title no-margin">WEB-CUM</p>
+                  <p class="author-nickname-in-queue no-margin">
+                    СТРУКТУРА ЩАСТЯ
                   </p>
-                  <p style="margin: 0; font-size: 12px">СТРУКТУРА ЩАСТЯ</p>
                 </div>
               </div>
 
@@ -253,18 +324,11 @@
                   src="/assets/images/jpg/song-cover-3.jpg"
                   alt="Ride by Twenty One Pilots"
                 />
-                <div
-                  style="
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    justify-content: center;
-                  "
-                >
-                  <p style="margin: 0; font-weight: bold; font-size: 15px">
-                    Ride
+                <div class="author-infobox">
+                  <p class="song-title no-margin">Ride</p>
+                  <p class="author-nickname-in-queue no-margin">
+                    Twenty One Pilots
                   </p>
-                  <p style="margin: 0; font-size: 12px">Twenty One Pilots</p>
                 </div>
               </div>
 
@@ -306,18 +370,9 @@
                   src="/assets/images/jpg/song-cover-4.jpg"
                   alt="хвора на любов by vioria"
                 />
-                <div
-                  style="
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    justify-content: center;
-                  "
-                >
-                  <p style="margin: 0; font-weight: bold; font-size: 15px">
-                    хвора на любов
-                  </p>
-                  <p style="margin: 0; font-size: 12px">vioria</p>
+                <div class="author-infobox">
+                  <p class="song-title no-margin">хвора на любов</p>
+                  <p class="author-nickname-in-queue no-margin">vioria</p>
                 </div>
               </div>
 
@@ -359,18 +414,9 @@
                   src="/assets/images/jpg/song-cover-5.jpg"
                   alt="Bad Boys by Inner Circle"
                 />
-                <div
-                  style="
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    justify-content: center;
-                  "
-                >
-                  <p style="margin: 0; font-weight: bold; font-size: 15px">
-                    Bad Boys
-                  </p>
-                  <p style="margin: 0; font-size: 12px">Inner Circle</p>
+                <div class="author-infobox">
+                  <p class="song-title no-margin">Bad Boys</p>
+                  <p class="author-nickname-in-queue no-margin">Inner Circle</p>
                 </div>
               </div>
 
@@ -412,18 +458,11 @@
                   src="/assets/images/jpg/song-cover-6.jpg"
                   alt="The Contract by Twenty One Pilots"
                 />
-                <div
-                  style="
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    justify-content: center;
-                  "
-                >
-                  <p style="margin: 0; font-weight: bold; font-size: 15px">
-                    The Contract
+                <div class="author-infobox">
+                  <p class="song-title no-margin">The Contract</p>
+                  <p class="author-nickname-in-queue no-margin">
+                    Twenty One Pilots
                   </p>
-                  <p style="margin: 0; font-size: 12px">Twenty One Pilots</p>
                 </div>
               </div>
 
@@ -465,18 +504,9 @@
                   src="/assets/images/jpg/song-cover-7.jpg"
                   alt="Faint by Linkin Park"
                 />
-                <div
-                  style="
-                    display: flex;
-                    flex-direction: column;
-                    gap: 4px;
-                    justify-content: center;
-                  "
-                >
-                  <p style="margin: 0; font-weight: bold; font-size: 15px">
-                    Faint
-                  </p>
-                  <p style="margin: 0; font-size: 12px">Linkin Park</p>
+                <div class="author-infobox">
+                  <p class="song-title no-margin">Faint</p>
+                  <p class="author-nickname-in-queue no-margin">Linkin Park</p>
                 </div>
               </div>
 
@@ -512,10 +542,7 @@
             </div>
 
             <a class="following" href="qwe.html">
-              <h4 style="margin: 0">
-                More
-                <span style="position: relative; bottom: 2px">↓</span> (23)
-              </h4>
+              <h4 class="no-margin">Show More ↴ (23)</h4>
             </a>
           </div>
         </div>
